deployments/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-multi-tenant-proxy-server
  labels:
    app.kubernetes.io/name: prometheus-multi-tenant-proxy-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-multi-tenant-proxy-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-multi-tenant-proxy-server
    spec:
      containers:
        - name: prometheus-multi-tenant-proxy-server
          image: ssbostan/prometheus-multi-tenant-proxy-server:latest
          ports:
            - name: http
              containerPort: 9999
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
              httpHeaders:
                - name: Authorization
                  value: Basic a3ViZS1wcm9iZTprdWJlLXByb2Jl
                - name: X-Namespace-Name
                  value: healthcheck-endpoints
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
              httpHeaders:
                - name: Authorization
                  value: Basic a3ViZS1wcm9iZTprdWJlLXByb2Jl
                - name: X-Namespace-Name
                  value: healthcheck-endpoints
          resources:
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 16Mi
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /opt/config
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: config
          configMap:
            name: prometheus-multi-tenant-proxy-server
