deployments/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-multi-tenant-proxy-server
  labels:
    app.kubernetes.io/name: prometheus-multi-tenant-proxy-server
spec:
  rules:
    - host: prometheus.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-multi-tenant-proxy-server
                port:
                  number: 80
